...
            "state" : "translated",
            "value" : "全部清除"
          }
        }
      }
    },
    "Clear search" : {
      "comment" : "A button to clear the search text.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "收藏喜欢的练习，保持连续记录，赢取徽章。"
          }
        }
      }
    },
    "Search exercises" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buscar ejercicios"
          }
...
            "state" : "translated",
            "value" : "开始呼吸"
          }
        }
      }
    },
    "Start Exercise" : {
      "comment" : "A button that starts an exercise.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
